--- a/index.html
+++ b/index.html
@@ -1,42 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Intro component with sign up form</title>
+    <script
+      src="https://kit.fontawesome.com/d0b14c9d9b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="sanitize.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="container">
+      <section class="title-container">
+        <h1 class="hero-title">Learn to code by watching others</h1>
+        <p class="hero-description">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </section>
+      <section class="form-container">
+        <div class="form-header">
+          <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
+        </div>
+        <div class="form-group">
+          <div class="form-controls">
+            <form action="" id="form">
+              <div class="form-control">
+                <input type="text" placeholder="First Name" />
+                <img
+                  src="images/icon-error.svg"
+                  class="error-icon"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+              <small class="error-msg">First Name cannot be empty</small>
 
-  Learn to code by watching others
+              <div class="form-control">
+                <input type="text" placeholder="Last Name" />
+                <img
+                  src="images/icon-error.svg"
+                  class="error-icon"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+              <small class="error-msg">First Name cannot be empty</small>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+              <div class="form-control">
+                <input type="email" placeholder="Email Address" />
+                <img
+                  src="images/icon-error.svg"
+                  class="error-icon"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+              <small class="error-msg">Looks like this is not an email</small>
 
-  Try it free 7 days then $20/mo. thereafter
+              <div class="form-control">
+                <input type="password" placeholder="Password" />
+                <img
+                  src="images/icon-error.svg"
+                  class="error-icon"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+              <small class="error-msg">Password cannot be empty</small>
+              <button class="register-button">claim your free trial</button>
+            </form>
+          </div>
+          <p class="conditional-statement-text">
+            By clicking the button, you are agreeing to our
+            <a href="#" class="conditional-statement-link"
+              >Terms and Services</a
+            >
+          </p>
+        </div>
+      </section>
+    </main>
+    <!-- Learn to code by watching others See how experienced developers solve
+      problems in real-time. Watching scripted tutorials is great, but
+      understanding how developers think is invaluable. Try it free 7 days then
+      $20/mo. thereafter First Name Last Name Email Address Password Claim your
+      free trial By clicking the button, you are agreeing to our Terms and
+      Services -->
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
