--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="form-controls">
             <form action="" id="form">
               <div class="form-control">
-                <input type="text" placeholder="First Name" />
+                <input type="text" placeholder="First Name" id="firstName" />
                 <img
                   src="images/icon-error.svg"
                   class="error-icon"
@@ -49,7 +49,7 @@
               <small class="error-msg">First Name cannot be empty</small>
 
               <div class="form-control">
-                <input type="text" placeholder="Last Name" />
+                <input type="text" placeholder="Last Name" id="lastName" />
                 <img
                   src="images/icon-error.svg"
                   class="error-icon"
@@ -60,7 +60,7 @@
               <small class="error-msg">First Name cannot be empty</small>
 
               <div class="form-control">
-                <input type="email" placeholder="Email Address" />
+                <input type="email" placeholder="Email Address" id="email" />
                 <img
                   src="images/icon-error.svg"
                   class="error-icon"
@@ -71,7 +71,7 @@
               <small class="error-msg">Looks like this is not an email</small>
 
               <div class="form-control">
-                <input type="password" placeholder="Password" />
+                <input type="password" placeholder="Password" id="password" />
                 <img
                   src="images/icon-error.svg"
                   class="error-icon"
@@ -92,13 +92,7 @@
         </div>
       </section>
     </main>
-    <!-- Learn to code by watching others See how experienced developers solve
-      problems in real-time. Watching scripted tutorials is great, but
-      understanding how developers think is invaluable. Try it free 7 days then
-      $20/mo. thereafter First Name Last Name Email Address Password Claim your
-      free trial By clicking the button, you are agreeing to our Terms and
-      Services -->
-
+    <dialog id="resultDialog"></dialog>
     <script src="index.js"></script>
   </body>
 </html>
